--- a/work.html
+++ b/work.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="work.css">
     <title>Practice</title>
 </head>
 <body>
-    <h1>Let's do something new</h1>
+    <h1 class="heading">Let's do something new</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Praesentium recusandae corrupti deserunt quam natus mollitia dicta amet, quis sint cumque facere asperiores dignissimos eius nobis iure eum vitae sequi. Ratione.</p>
 </body>
 </html>
